--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.1
   cloud_firestore: ^5.6.8
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
      - assets/icons/mixing_mastering.png
      - assets/icons/music_production.png
      - assets/icons/vocals.png
+     - assets/icons/arrow_right.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
