--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.13.1
   cloud_firestore: ^5.6.8
   provider: ^6.1.5
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
