--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.8
   provider: ^6.1.5
   flutter_svg: ^2.1.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
